Nuevos controladores para 'experiencia', 'persona', 'habilidades', y 'educacion'.