@@ -14,34 +14,23 @@ public class UsuarioPrincipal implements UserDetails {
     private String nombreUsuario;
     private String email;
     private String password;
-    /* private String title;  private String parrafo; private String url; private String github; private String linkedin; */
     private Collection<? extends GrantedAuthority> authorities;
 
-    
-    
-    public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password,
-            /*String title, String parrafo, String url, String github, String linkedin,*/
-            Collection<? extends GrantedAuthority> authorities) {
+    //Constructor
+    public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
         this.nombre = nombre;
         this.nombreUsuario = nombreUsuario;
         this.email = email;
         this.password = password;
         this.authorities = authorities;
-        /*
-        this.title = title;
-        this.parrafo = parrafo;
-        this.url = url;
-        this.github = github;
-        this.linkedin = linkedin;
-        */
     }
 
     public static UsuarioPrincipal build(Usuario usuario) {
-        List<GrantedAuthority> authorities = usuario.getRoles().stream().map(rol -> new SimpleGrantedAuthority(
-                rol.getRolNombre().name())).collect(Collectors.toList());
+        List<GrantedAuthority> authorities = usuario.getRoles().stream()
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
+                .toList());
         return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
-                usuario.getPassword(), authorities); /*usuario.getTitle(), usuario.getParrafo(),
-                usuario.getUrl(), usuario.getGithub(), usuario.getLinkedin(),*/
+                 usuario.getPassword(), authorities);
     }
 
     @Override
@@ -54,29 +43,19 @@ public class UsuarioPrincipal implements UserDetails {
         return password;
     }
 
+    public String getNombre() {
+        return nombre;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
     @Override
     public String getUsername() {
         return nombreUsuario;
     }
 
-    /*
-    public String getTitle() {
-        return title;
-    }
-    public String getParrafo() {
-        return parrafo;
-    }
-    public String getUrl() {
-        return url;
-    }
-    public String getGithub() {
-        return github;
-    }
-    public String getLinkedin() {
-        return linkedin;
-    }
-     */
-    
     @Override
     public boolean isAccountNonExpired() {
         return true;
@@ -97,11 +76,4 @@ public class UsuarioPrincipal implements UserDetails {
         return true;
     }
 
-    public String getNombre() {
-        return nombre;
-    }
-
-    public String getEmail() {
-        return email;
-    }
 }
